# Peeps-OOP-Demo

./: .gitignore  CMakeLists.txt  README.md
include/: App.h  Base.h  InputUtils.h  Student.h  Teacher.h
src/: App.cpp  Base.cpp  InputUtils.cpp  Student.cpp  Teacher.cpp  main.cpp
